# Mage

./: README.md
mage/: Cargo.toml  test.html  test.md
mage/src/: main.rs
